# opentx-espnow-rx

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/extra_arduino_libs/: CMakeLists.txt
main/: CMakeLists.txt  espnow_rc_rx.cpp  esprx.h  led_qtpy_esp32s2.cpp  mcpwm.cpp  pwm.cpp  rx.cpp
